--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
       <nav>
         <ul>
           <li><a href="index.html">Studio</a></li>
-          <li><a href="../Portfolio/portfolio.html">Portfolio</a></li>
-          <li><a href="../Contacts/contacts.html">Contacts</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contacts.html">Contacts</a></li>
         </ul>
       </nav>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       <a href="tel:+12127724150">+1 212-772-4150</a>
       <!--Logo-urile pt Studio si eMail ce le vom stiliza mai tarziu in CSS-->
-      <span><img src="../images/logo.svg" alt="Click Studio logo" width="13"></span>
-      <span><img src="../images/logo.svg" alt="Click eMail logo" width="13"></span>
+      <span><img src="./assets/logo.svg" alt="Click Studio logo" width="13"></span>
+      <span><img src="./assets/logo.svg" alt="Click eMail logo" width="13"></span>
     </header>
     <main>
       <!--Top section-->
@@ -44,30 +44,30 @@
       <!--What we do section-->
       <section>
         <h2>What we do</h2>
-        <img src="../images/img1wwd.jpg" alt="Coding.." width="370">
-        <img src="../images/img2wwd.jpg" alt="Checking phone.." width="370">
-        <img src="../images/img3wwd.jpg" alt="And sometimes our tablet :D" width="370">
+        <img src="./assets/img1wwd.jpg" alt="Coding.." width="370">
+        <img src="./assets/img2wwd.jpg" alt="Checking phone.." width="370">
+        <img src="./assets/img3wwd.jpg" alt="And sometimes our tablet :D" width="370">
       </section>
       <!--Our team section-->
       <section>
         <h2>Our Team</h2>
         <div>
-          <img src="../images/img1ot.jpg" alt="Picture of Chris" width="270">
+          <img src="./assets/img1ot.jpg" alt="Picture of Chris" width="270">
           <h4>Christopher Walker</h4>
           <h4>Product Designer</h4>
         </div>
         <div>
-          <img src="../images/img2ot.jpg" alt="Picture of Kylie" width="270">
+          <img src="./assets/img2ot.jpg" alt="Picture of Kylie" width="270">
           <h4>Kylie Evans</h4>
           <h4>Frontend Developer</h4>
         </div>
         <div>
-          <img src="../images/img3ot.jpg" alt="Picture of Ryan" width="270">
+          <img src="./assets/img3ot.jpg" alt="Picture of Ryan" width="270">
           <h4>Ryan Harris</h4>
           <h4>Marketing</h4>
         </div>
         <div>
-          <img src="../images/img4ot.jpg" alt="Picture of Tyler" width="270">
+          <img src="./assets/img4ot.jpg" alt="Picture of Tyler" width="270">
           <h4>Tyler Moore</h4>
           <h4>UI Designer</h4>
         </div>
