--- a/index.html
+++ b/index.html
@@ -19,55 +19,59 @@
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       <a href="tel:+12127724150">+1 212-772-4150</a>
       <!--Logo-urile pt Studio si eMail ce le vom stiliza mai tarziu in CSS-->
-      <span><img src="./assets/logo.svg" alt="Click Studio logo" width="13"></span>
-      <span><img src="./assets/logo.svg" alt="Click eMail logo" width="13"></span>
+      <span><img src="./assets/logo.svg" alt="Click Studio logo" width="13" height="16"></span>
+      <span><img src="./assets/logo.svg" alt="Click eMail logo" width="13" height="16"></span>
     </header>
     <main>
       <!--Top section-->
       <section>
         <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
-        <button>Request our service</button>
+        <button type="button">Request our service</button>
       </section>
-      <!--About us section // am pus <div> aici deoarece mi-a recomandat site-ul validator.w3.org sa-l pun in loc de <section> in lipsa unui element <h1..h6>-->
-      <div>
-        <dl>
-          <dt><b>ATTENTION TO DETAILS</b></dt>
-          <dd>We go into all the details and processes of your business to develop a customized solution.</dd>
-          <dt><b>PUNCTUALITY</b></dt>
-          <dd>With us, you can feel safe and secure. An important principle of the company: respect your time and deadlines.</dd>
-          <dt><b>PLANNING</b></dt>
-          <dd>You will be able to observe and participate in every phase of solution development and implementation.</dd>
-          <dt><b>MODERN TECHNOLOGIES</b></dt>
-          <dd>We use innovative tools to solve assigned tasks. It's time to simplify work processes.</dd>
-        </dl>
-      </div>
+      <!--About us section-->
+      <section>
+        <ul>
+          <li><b>ATTENTION TO DETAILS</b>
+            <p>We go into all the details and processes of your business to develop a customized solution.</p>
+          </li>
+          <li><b>PUNCTUALITY</b>
+            <p>With us, you can feel safe and secure. An important principle of the company: respect your time and deaulines.</p>
+          </li>
+          <li><b>PLANNING</b>
+            <p>You will be able to observe and participate in every phase of solution development and implementation.</p>
+          </li>
+          <li><b>MODERN TECHNOLOGIES</b>
+            <p>We use innovative tools to solve assigned tasks. It's time to simplify work processes.</p>
+          </li>
+        </ul>
+      </section>
       <!--What we do section-->
       <section>
         <h2>What we do</h2>
-        <img src="./assets/img1wwd.jpg" alt="Coding.." width="370">
-        <img src="./assets/img2wwd.jpg" alt="Checking phone.." width="370">
-        <img src="./assets/img3wwd.jpg" alt="And sometimes our tablet :D" width="370">
+        <img src="./assets/img1wwd.jpg" alt="Coding.." width="370" height="294">
+        <img src="./assets/img2wwd.jpg" alt="Checking phone.." width="370" height="294">
+        <img src="./assets/img3wwd.jpg" alt="And sometimes our tablet :D" width="370" height="294">
       </section>
       <!--Our team section-->
       <section>
         <h2>Our Team</h2>
         <div>
-          <img src="./assets/img1ot.jpg" alt="Picture of Chris" width="270">
+          <img src="./assets/img1ot.jpg" alt="Picture of Chris" width="270" height="260">
           <h4>Christopher Walker</h4>
           <h4>Product Designer</h4>
         </div>
         <div>
-          <img src="./assets/img2ot.jpg" alt="Picture of Kylie" width="270">
+          <img src="./assets/img2ot.jpg" alt="Picture of Kylie" width="270" height="260">
           <h4>Kylie Evans</h4>
           <h4>Frontend Developer</h4>
         </div>
         <div>
-          <img src="./assets/img3ot.jpg" alt="Picture of Ryan" width="270">
+          <img src="./assets/img3ot.jpg" alt="Picture of Ryan" width="270" height="260">
           <h4>Ryan Harris</h4>
           <h4>Marketing</h4>
         </div>
         <div>
-          <img src="./assets/img4ot.jpg" alt="Picture of Tyler" width="270">
+          <img src="./assets/img4ot.jpg" alt="Picture of Tyler" width="270" height="260">
           <h4>Tyler Moore</h4>
           <h4>UI Designer</h4>
         </div>
