--- a/index.html
+++ b/index.html
@@ -31,16 +31,20 @@
       <!--About us section-->
       <section>
         <ul>
-          <li><b>ATTENTION TO DETAILS</b>
+          <li>
+            <h5>ATTENTION TO DETAILS</h5>
             <p>We go into all the details and processes of your business to develop a customized solution.</p>
           </li>
-          <li><b>PUNCTUALITY</b>
+          <li>
+            <h5>PUNCTUALITY</h5>
             <p>With us, you can feel safe and secure. An important principle of the company: respect your time and deaulines.</p>
           </li>
-          <li><b>PLANNING</b>
+          <li>
+            <h5>PLANNING</h5>
             <p>You will be able to observe and participate in every phase of solution development and implementation.</p>
           </li>
-          <li><b>MODERN TECHNOLOGIES</b>
+          <li>
+            <h5>MODERN TECHNOLOGIES</h5>
             <p>We use innovative tools to solve assigned tasks. It's time to simplify work processes.</p>
           </li>
         </ul>
@@ -58,22 +62,22 @@
         <div>
           <img src="./assets/img1ot.jpg" alt="Picture of Chris" width="270" height="260">
           <h4>Christopher Walker</h4>
-          <h4>Product Designer</h4>
+          <p>Product Designer</p>
         </div>
         <div>
           <img src="./assets/img2ot.jpg" alt="Picture of Kylie" width="270" height="260">
           <h4>Kylie Evans</h4>
-          <h4>Frontend Developer</h4>
+          <p>Frontend Developer</p>
         </div>
         <div>
           <img src="./assets/img3ot.jpg" alt="Picture of Ryan" width="270" height="260">
           <h4>Ryan Harris</h4>
-          <h4>Marketing</h4>
+          <p>Marketing</p>
         </div>
         <div>
           <img src="./assets/img4ot.jpg" alt="Picture of Tyler" width="270" height="260">
           <h4>Tyler Moore</h4>
-          <h4>UI Designer</h4>
+          <p>UI Designer</p>
         </div>
       </section>
     </main>
